test/fail/invalid_args2.min
program
    function forward number x number y; number z done
start
   x(3) ; 
end
